Added new fields and features

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -8,6 +8,7 @@
 <!--    <link th:href="@{/style.css}" rel="stylesheet">-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" th:href="@{/style.css}">
 </head>
 <body>
 <nav th:fragment="header">
@@ -16,6 +17,7 @@
         <li class="nav-item"><a class="nav-link" href="/house">All Listings</a></li>
         <li class="nav-item"><a class="nav-link" href="/house/add">Add House</a></li>
         <li class="nav-item"><a class="nav-link" href="/house/delete">Delete HouseListings</a></li>
+        <li class="nav-item"><a class="nav-link" href="/house/update">Update HouseListings</a></li>
     </ul>
 </nav>
 </body>
