--- a/src/main/resources/templates/house/updateDetails.html
+++ b/src/main/resources/templates/house/updateDetails.html
@@ -3,12 +3,7 @@
 <head th:replace="fragments :: head"></head>
 <body class ="container">
 <header th:replace="fragments :: header"></header>
-
-
-<h1>Add Listing</h1>
-
-
-<form method="post" action="/house/add">
+<form method="post" >
     <div class="form-group">
         <label>House
             <input th:field="${houseList.houseDescription}" class="form-control">
@@ -29,7 +24,7 @@
     </div>
     <div class="form-group">
         <label>Status
-<!--            <input th:feild="${houseList.status}" class="form-control">-->
+            <!--            <input th:feild="${houseList.status}" class="form-control">-->
             <select th:field="${houseList.status}">
                 <option th:each="type : ${types}"
                         th:value="${type}"
@@ -46,7 +41,15 @@
         <p class="error" th:errors="${houseList.yearBuilt}"></p>
     </div>
     <div class="form-group">
-        <input type="submit" value="Add House" class="btn btn-success">
+        <label>
+            <input type="hidden" name="houseId" th:value="${houseList.id}">
+        </label>
+    </div>
+    <br>
+    <div class="form-group">
+        <label>
+            <input type="submit" value="Update" class="btn btn-success">
+        </label>
     </div>
 </form>
 </body>
