Related to Object Relational Mapping

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -18,6 +18,9 @@
         <li class="nav-item"><a class="nav-link" href="/house/add">Add House</a></li>
         <li class="nav-item"><a class="nav-link" href="/house/delete">Delete HouseListings</a></li>
         <li class="nav-item"><a class="nav-link" href="/house/update">Update HouseListings</a></li>
+        <li class="nav-item"><a class="nav-link" href="/status">View Status</a></li>
+        <li class="nav-item"><a class="nav-link" href="/status/create">Create new Status</a></li>
+
     </ul>
 </nav>
 </body>
