--- a/src/main/resources/templates/view.html
+++ b/src/main/resources/templates/view.html
@@ -26,7 +26,7 @@
         <td th:text="${houseList.location}"></td>
         <td th:text="${houseList.price}+K"></td>
         <td th:text="${houseList.yearBuilt}"></td>
-        <td th:text="${houseList.status}"></td>
+        <td th:text="${houseList.status.statusName}"></td>
 
     </tr>
 </table>
