Implemented Agent authentication

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,7 +3,11 @@
 <head th:replace="fragments :: head"></head>
 <body class ="container">
 <h1>KC Agent Listings</h1>
-<h2>Welcome to Kansas Home Listings</h2>
-<header th:replace="fragments :: header"></header>
+<h2>Begin The Journey Home</h2>
+
+<header th:replace="fragments :: userHeader"></header>
+<P>Welcome to Kansas Home Listings.We help you find your dream home.Our agents are the experts on our local communities and will guide you through every step of the home buying or selling process.</P>
+<p>Buying a home is the beginning of a new chapter, and we’re here to be your trusted advisor as you embark on this exciting, emotional journey</p>
+<a href="/view">Search new Home Listings</a>
 </body>
 </html>
