--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -13,14 +13,24 @@
 <body>
 <nav th:fragment="header">
     <h1 th:text="${title}">KC House Listing</h1>
+    <ul class="nav" style="float:right;">
+        <li class="nav-item"><a class="nav-link" href="/logout">Log out</a></li>
+    </ul>
+
     <ul class="nav">
-        <li class="nav-item"><a class="nav-link" href="/house">All Listings</a></li>
+        <li class="nav-item"><a class="nav-link" href="/view">All Listings</a></li>
         <li class="nav-item"><a class="nav-link" href="/house/add">Add House</a></li>
         <li class="nav-item"><a class="nav-link" href="/house/delete">Delete HouseListings</a></li>
         <li class="nav-item"><a class="nav-link" href="/house/update">Update HouseListings</a></li>
         <li class="nav-item"><a class="nav-link" href="/status">View Status</a></li>
         <li class="nav-item"><a class="nav-link" href="/status/create">Create new Status</a></li>
 
+    </ul>
+</nav>
+<nav th:fragment="userHeader">
+    <ul class="nav">
+        <li class="nav-item"><a class="nav-link" href="/view">All Listings</a></li>
+        <li class="nav-item"><a class="nav-link" href="/login">Agent</a></li>
     </ul>
 </nav>
 </body>
